Fixed bug #902:Aligned help icon along with text : Kanchan

--- a/media/css/plugins/960gd/ie7.css
+++ b/media/css/plugins/960gd/ie7.css
@@ -117,7 +117,3 @@ span.error_arrow,#questionnaire-code-error, label.error_arrow{
 .all_projects{
     margin-top: -20px;
 }
-
-.help{
-    margin-right: 360px !important;
-}
