--- a/media/css/scss/section_new_create_project.scss
+++ b/media/css/scss/section_new_create_project.scss
@@ -180,3 +180,9 @@ padding-left: 20px;
     width:86%;
     margin: 0px 0px 10px 0px !important;
 }
+
+.help{
+    label{
+        float: left !important;
+    }
+}
